# QuadRetopology

./: CMakeLists.txt  README.md  demo.cpp  patchInformation.patch  qr_basic_types.h  qr_interface.h  qr_internal.cpp  qr_projector.h
